# allganize-types

./: README.md  pyproject.toml  setup.py  tags
mongoengine-stubs/: __init__.pyi  connection.pyi  context_managers.pyi  dereference.pyi  document.pyi  errors.pyi  fields.pyi  mongodb_support.pyi  pymongo_support.pyi  python_support.pyi  signals.pyi
mongoengine-stubs/base/: __init__.pyi  common.pyi  datastructures.pyi  document.pyi  fields.pyi  metaclasses.pyi
mongoengine-stubs/queryset/: __init__.pyi  base.pyi  field_list.pyi  manager.pyi  queryset.pyi  transform.pyi  visitor.pyi
